@@ -1,6 +1,9 @@
 trunk
 =====
 * improved error messages for non 1 x n means vectors in FIML and ML
+* fixed a performance bug that was forcing too many recalculations of the covariance matrix in FIML optimizations.
+* defualt behavior is to disable standard error calculations when model contains nonlinear constraints
+
 
 Release 0.5.2-1376 (August 29, 2010)
 ====================================
